--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@ldolne/npx-card",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A personal card for Laëtitia Dolne",
-  "main": "./index.js",
+  "main": "index.js",
   "bin": {
-    "ldolne": "./index.js"
+    "ldolne": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
